k8s/frontend/overlays/productie/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: energytruth-frontend
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: frontend
