k8s/frontend/overlays/productie/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: energytruth-ingress
  namespace: energytruth-productie
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - energy-truth.nl
    - mierlofirst.org
    - www.mierlofirst.org
    secretName: energytruth-tls-secret
  rules:
  - host: energy-truth.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-energytruth-frontend-service
            port:
              number: 8080
  - host: mierlofirst.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-energytruth-frontend-service
            port:
              number: 8080
  - host: www.mierlofirst.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-energytruth-frontend-service
            port:
              number: 8080
